Fix only bracket wrapping

--- a/public/popup.css
+++ b/public/popup.css
@@ -424,6 +424,10 @@
   padding-bottom: 5px;
 }
 
+.sbStatsSentence .sbExtraInfo {
+  display: inline-blockreativK;
+}
+
 /*
  * Increase font size of username input and display
  */
